feat: integrate `RegionService` and enhance enums with `kod` and `nazwa`
- Added `RegionService` with logic for determining `Makroregion` from `Terc` or `Wojewodztwo`.
- Updated enums (`RodzajRaportu`, `RodzajKatalogu`, `PoziomJednostkiTerytorialnej`, `Makroregion`, `PoziomNuts`) to implement `Slownik` interface and include `kod` and `nazwa` fields.
- Enhanced `TerytClientImpl` with calls to `RegionService` and `DictionaryService` for cleaner logic around enums and dictionaries.
- Refactored `DictionaryService` to provide pre-defined enums.